# SethuAI

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  dev.sh  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: client_test.py  pyproject.toml  sample_petstore.json
backend/app/: api.py  audit.py  config.py  crypto.py  generator.py  main.py  mcp_runtime.py  models.py  net.py  security.py  storage.py
backend/tests/: test_crypto.py  test_generator.py  test_net.py  test_runtime.py  test_security.py  test_storage.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: CatalogEditor.tsx  Dashboard.tsx  Landing.tsx  UploadView.tsx  ui.tsx
