[project]
name = "sethuai-bridge"
version = "0.2.0"
description = "SethuAI (Bridge) — generate and host an MCP Streamable HTTP adapter from an OpenAPI/Swagger spec"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "mcp>=1.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
]

[tool.uv]
package = false
